<resources>
    <string name="app_name">Termix</string>
    <string name="btn_daily_game">Jogo Diário</string>
    <string name="btn_minigames">Minijogos</string>
    <string name="desc_back_to_home_screen">Voltar para a tela inicial</string>
    <string name="desc_rules">Regras do jogo</string>
    <string name="desc_profile">Perfil do jogador</string>
    <string name="title_daily_game">Termix Diário</string>
    <string name="title_minigames">Minijogos</string>
    <string name="infinite_minigame">Modo Infinito</string>
    <string name="time_limit_minigame">Limite de Tempo</string>
    <string name="termix_turbo_minigame">Termix Turbo</string>
    <string name="profile_title">Perfil</string>
    <string name="historico_de_partidas">Histórico de Partidas</string>
    <string name="perfil_do_usuario">Perfil do Usuário</string>
    <string name="month_year">%1$s %2$d</string>
    <string name="sequencia_de_vitorias">Sequência de vitórias:</string>
    <string name="_0">0</string>
    <string name="total_vitorias">Total de vitórias:</string>
    <string name="total_partidas">Total de partidas jogadas:</string>
    <string name="total_derrotas">Total de derrotas:</string>
    <string name="daily_rules_title">Modo de jogo diário</string>
    <string name="infinite_rules_title">Minigame infinito</string>
    <string name="time_rules_title">Minigame com limite de tempo</string>
    <string name="turbo_rules_title">Minigame Termix Turbo</string>
    <string name="general_rules_1">O objetivo do jogo é acertar a palavra secreta certa em 6 tentativas. Após cada tentativa, o jogo irá indicar o quão perto você está de descobrir a palavra por meio das cores das letras. </string>
    <string name="general_rules_2">No exemplo acima, <b>TERRA</b> não é a palavra secreta, mas a letra <b>R</b> está na posição correta. A letra <b>A</b> faz parte da palavra secreta, mas fica em outra posição. Letras com o fundo cinza não fazem parte da palavra secreta. </string>
    <string name="general_rules_3">A palavra secreta pode ter letras repetidas. Note que no exemplo, a palavra secreta não tem outra letra <b>R</b>, mas pode ser que a letra <b>A</b> seja repetida.</string>
    <string name="general_rules_4">Não se preocupe com acentos! Eles serão preenchidos automaticamente após inserir uma palalavra.</string>
    <string name="daily_rules">No modo de jogo de jogo diário, uma palavra nova é sorteada a cada dia. Por isso, não se esqueça de jogar todo dia e ver o seu progresso no perfil!</string>
    <string name="infinite_rules">No modo de jogo infinito, você pode tentar acertar a palavra secreta quantas vezes quiser sem limite diário do jogo padrão! Jogue quantas vezes quiser, treina para acertar a palavra diária ou se divirta no tempo livre.</string>
    <string name="time_rules">No modo de jogo com limite de tempo, você deve tentar adivinhar a palavra secreta o mais rápido possível antes que o tempo acabe! Quando menos tentativas usar e quanto mais rápido adivinhar, maior a sua pontuação.</string>
    <string name="turbo_rules">No modo de jogo Termix Turbo, você deve tentar adivinhar o máximo de palavras secretas possíveis antes do tempo acabar. Cuidado! Errar palavras pode diminuir os seus pontos, então jogue com sabedoria.</string>
    <string name="rule_example_t">T</string>
    <string name="rule_example_e">E</string>
    <string name="rule_example_r">R</string>
    <string name="rule_example_a">A</string>
    <string name="desc_retry_btn">Botão para começar um novo jogo</string>
    <string name="_01_00">01:00</string>
    <string name="_00_00">00:00</string>
    <string name="desc_decrease_time">-</string>
    <string name="desc_increase_time">+</string>
</resources>