<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Tela princial com as regras -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/background_rules">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turbo_rules_title"
            android:textSize="@dimen/font_20"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_rules_1"
            android:textSize="@dimen/font_16"
            android:layout_marginVertical="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Linha com as letras letras -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/rule_example_t"
                    android:background="@color/gray"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_margin="4dp"/>

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/rule_example_e"
                    android:background="@color/gray"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_margin="4dp"/>

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/rule_example_r"
                    android:background="@color/green"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_margin="4dp"/>

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/rule_example_r"
                    android:background="@color/gray"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_margin="4dp"/>

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/rule_example_a"
                    android:background="@color/yellow"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_margin="4dp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_rules_2"
            android:textSize="@dimen/font_16"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_rules_3"
            android:textSize="@dimen/font_16"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_rules_4"
            android:textSize="@dimen/font_16"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turbo_rules"
            android:textSize="@dimen/font_16"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</RelativeLayout>