<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeLimitMinigame">

    <ImageButton
        android:id="@+id/back_to_home_time_limit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/left_arrow"
        android:contentDescription="@string/desc_back_to_home_screen"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/rule_time_limite_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/question_mark"
        android:contentDescription="@string/desc_rules"
        android:padding="15dp"
        app:layout_constraintStart_toEndOf="@+id/back_to_home_time_limit_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/profile_time_limite_btn"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/baseline_account_circle_24"
        android:contentDescription="@string/desc_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_time_limite_minigame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_limit_minigame"
        android:textSize="@dimen/font_44"
        android:textStyle="bold"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Botão de diminuir tempo -->
    <ImageButton
        android:id="@+id/decrease_time_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_minus"
        android:contentDescription="@string/desc_decrease_time"
        android:padding="15dp"
        app:layout_constraintEnd_toStartOf="@id/time_display"
        app:layout_constraintTop_toBottomOf="@id/title_time_limite_minigame"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- TextView do Timer -->
    <TextView
        android:id="@+id/time_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_01_00"
        android:textSize="@dimen/font_32"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/decrease_time_btn"
        app:layout_constraintEnd_toStartOf="@id/increase_time_btn"
        app:layout_constraintTop_toBottomOf="@id/title_time_limite_minigame"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- Botão de aumentar tempo -->
    <ImageButton
        android:id="@+id/increase_time_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/ic_plus"
        android:contentDescription="@string/desc_increase_time"
        android:padding="15dp"
        app:layout_constraintStart_toEndOf="@id/time_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_time_limite_minigame" />
</androidx.constraintlayout.widget.ConstraintLayout>
